# type-erasure-example

./: .clang-format  .clang-tidy  .cmake-format.py  CMakeLists.txt
src/: CMakeLists.txt  circle.cc  circle.hh  circle_operations.cc  circle_operations.hh  main.cc  shape.cc  shape.hh  shape_operations.cc  shape_operations.hh  square.cc  square.hh  square_operations.cc  square_operations.hh
